# evaluate_fake_news_dataset

./: .gitignore  README.md  pyproject.toml
src/: additional_preprocess.py  check_by_sample.py  check_statistics.py  check_summary.py  evaluate.py  process_dataset.py  remove_In_phrase.py  run.py  special_token.py  split_training_data.py
src/const/: special_token.py
src/data_preprocess/: few_shot_prompt.txt  gpt_for_summary.py  preprocess.py
src/finetune/: data.py  model.py  model_pred_by_cls.py  model_pred_by_target.py
src/type/: fake_news_dataset.py  processed_dataset.py
