[tool.poetry]
name = "evaluate-fake-news-dataset"
version = "0.1.0"
description = ""
authors = ["YuukiHaraProgramming <hara@nlp.ist.i.kyoto-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
transformers = "^4.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
